stacks/media/prowlarr/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  # namespace: default
spec:
  ports:
    - port: 9696
      protocol: TCP
      # targetPort: 80
  selector:
    app: prowlarr
  type: ClusterIP
